objects/DCP_Renewal_Setting__mdt.object
<CustomObject>
    <description>Metadata for DCP Renewal.</description>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Value__c</fullName>
        <label>Field Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Name__c</fullName>
        <description>Holds the Name of the Segment (Small Law, Medium Law, Government, Corporate)</description>
        <label>Segment Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>DCP Renewal Setting</label>
    <pluralLabel>DCP Renewal Settings</pluralLabel>
</CustomObject>